@@ -416,6 +416,17 @@
             implementationClass="com.jetbrains.snakecharm.inspections.SmkRedundantCommaInspection"
     />
 
+    <localInspection
+            language="Snakemake" shortName="SmkWildcardNotDefinedInExpressionInspection"
+            enabledByDefault="true"
+            level="ERROR"
+            suppressId="SmkWildcardNotDefinedInExpression"
+            bundle="SnakemakeBundle"
+            groupKey="INSP.GROUP.snakemake"
+            key="INSP.NAME.wildcard.not.defined.in.expression.title"
+            implementationClass="com.jetbrains.snakecharm.inspections.SmkWildcardNotDefinedInExpressionInspection"
+    />
+
     <findUsagesHandlerFactory
             implementation="com.jetbrains.snakecharm.codeInsight.refactoring.SmkFindUsagesHandlerFactory"
             id="Python" order="last, before default"
