@@ -103,6 +103,10 @@ INSP.NAME.wildcards.confusing.name.with.dot.message=Confusing wildcard name: ''{
 INSP.NAME.redundant.comma.title=Comma is unnecessary
 INSP.NAME.redundant.comma.fix.message=Remove redundant comma
 
+# SmkWildcardNotDefinedInExpressionInspection
+INSP.NAME.wildcard.not.defined.in.expression.title=Undefined wildcard usage.
+INSP.NAME.wildcard.not.defined.in.expression=Wildcard ''{0}'' isn''t properly defined.
+
 # SmkPyUnboundLocalVariableInspection
 INSP.NAME.unbound=Unbound local variable
 
