@@ -1,0 +1,5 @@
+<html>
+<body>
+Fetch correct wildcards if arg value in rule is link to other section or section arg
+</body>
+</html>
